Done linking the activities

--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact Form</title>
+		<title>Activities</title>
 
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
 		<div class="container">
-			<h1>Contact Form</h1>
+			<h1>HTML, CSS and Javascript Activities</h1>
+
+			<table class="content-table">
+				<thead>
+					<tr>
+						<th>Activity</th>
+						<th>Description & Link</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>S03</td>
+						<td><a href="./s03/index.html">WD078-3 HTML - Introduction</a></td>
+					</tr>
+					<tr class="active-row">
+						<td>S04</td>
+						<td>
+							<a href="./s04/activity/index.html">WD078-4 HTML - Attributes and Hyperlinks</a>
+							</td>
+					</tr>
+					<tr>
+						<td>S05</td>
+						<td>
+							<a href="./s05/index.html">WD078-5 HTML - Forms, Tables and Semantic HTML</a>
+							</td>
+					</tr>
+					<tr>
+						<td>S06</td>
+						<td>
+							<a href="./s06/index.html">WD078-6 CSS - Introduction and CSS Selectors</a>
+							</td>
+					</tr>
+				</tbody>
+			</table>
+
 			
 		</div>
 
