--- a/s04/activity/index.html
+++ b/s04/activity/index.html
@@ -5,7 +5,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<title>Anchor tags Exercises</title>
+		<title>HTML - Attributes and Hyperlinks</title>
 
 		<style>
 			body {
