--- a/s06/index.html
+++ b/s06/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Activity: CSS Introduction</title>
+		<title>CSS - Introduction and CSS Selectors</title>
 
 		<link rel="stylesheet" href="style.css" />
 	</head>
