Added ungraded activity

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<td>S03</td>
 						<td><a href="./s03/index.html">WD078-3 HTML - Introduction</a></td>
 					</tr>
-					<tr class="active-row">
+					<tr>
 						<td>S04</td>
 						<td>
 							<a href="./s04/activity/index.html">WD078-4 HTML - Attributes and Hyperlinks</a>
@@ -47,6 +47,29 @@
 
 			
 		</div>
+
+
+		
+	</div>
+
+	<div class="container">
+	<h1>Ungraded Activities</h1>
+	<table class="content-table">
+		<thead>
+			<tr>
+				<th>Ungraded Activity</th>
+				<th>Description & Link</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>S07</td>
+				<td><a href="./d/index.html">WD078-7 CSS - Box Model</a></td>
+			</tr>
+		</tbody>
+	</table>
+
+</div>
 
 		<script src="js/script.js" />
 	</body>
