Revised ungraded activity s07

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<table class="content-table">
 		<thead>
 			<tr>
-				<th>Ungraded Activity</th>
+				<th>Ungraded</th>
 				<th>Description & Link</th>
 			</tr>
 		</thead>
