--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
 						<td>S06</td>
 						<td>
 							<a href="./s06/index.html">WD078-6 CSS - Introduction and CSS Selectors</a>
-							</td>
-					</tr>
+							</td> 
+					</tr> WD078-7 CSS - Box Model
+
+					<tr>
+						<td>S07</td>
+						<td>
+							<a href="./s07/index.html">WD078-7 CSS - Box Model</a>
+							</td> 
+					</tr> 
 				</tbody>
 			</table>
 
