s07, zuitt clone, version 0.2

--- a/s07/index.html
+++ b/s07/index.html
@@ -27,7 +27,7 @@
 				<div class="nav">Companies</div>
 				<div class="nav">BootcampFAQ</div>
 				<div class="nav">Blog</div>
-				<button>Apply Now</button>
+				<button>APPLY NOW</button>
 			</nav>
 		</header>
 
