Done with s08, WD078-8 Bootstrap - Introduction and Simple Styles

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 							<a href="./s07/index.html">WD078-7 CSS - Box Model</a>
 							</td> 
 					</tr> 
+					<tr>
+						<td>S07</td>
+						<td>
+							<a href="./s08/index.html">WD078-8 Bootstrap - Introduction and Simple Styles</a>
+							</td> 
+					</tr> 
 				</tbody>
 			</table>
 
