Added s09 WD078-9 Bootstrap - Grid System, passed lang sa s08, ayoko na. AHAHAHA. Di nako mag expect ng superb, gawin ko nalang yung niventa

--- a/index.html
+++ b/index.html
@@ -27,62 +27,71 @@
 					<tr>
 						<td>S04</td>
 						<td>
-							<a href="./s04/activity/index.html">WD078-4 HTML - Attributes and Hyperlinks</a>
-							</td>
+							<a href="./s04/activity/index.html"
+								>WD078-4 HTML - Attributes and Hyperlinks</a
+							>
+						</td>
 					</tr>
 					<tr>
 						<td>S05</td>
 						<td>
-							<a href="./s05/index.html">WD078-5 HTML - Forms, Tables and Semantic HTML</a>
-							</td>
+							<a href="./s05/index.html"
+								>WD078-5 HTML - Forms, Tables and Semantic HTML</a
+							>
+						</td>
 					</tr>
 					<tr>
 						<td>S06</td>
 						<td>
-							<a href="./s06/index.html">WD078-6 CSS - Introduction and CSS Selectors</a>
-							</td> 
-					</tr> WD078-7 CSS - Box Model
+							<a href="./s06/index.html"
+								>WD078-6 CSS - Introduction and CSS Selectors</a
+							>
+						</td>
+					</tr>
+					WD078-7 CSS - Box Model
 
 					<tr>
 						<td>S07</td>
 						<td>
 							<a href="./s07/index.html">WD078-7 CSS - Box Model</a>
-							</td> 
-					</tr> 
+						</td>
+					</tr>
 					<tr>
-						<td>S07</td>
+						<td>S08</td>
 						<td>
-							<a href="./s08/index.html">WD078-8 Bootstrap - Introduction and Simple Styles</a>
-							</td> 
-					</tr> 
+							<a href="./s08/index.html"
+								>WD078-8 Bootstrap - Introduction and Simple Styles</a
+							>
+						</td>
+					</tr>
+
+					<tr>
+						<td>S09</td>
+						<td>
+							<a href="./s09/index.html">WD078-9 Bootstrap - Grid System</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
-
-			
 		</div>
 
-
-		
-	</div>
-
-	<div class="container">
-	<h1>Ungraded Activities</h1>
-	<table class="content-table">
-		<thead>
-			<tr>
-				<th>Ungraded</th>
-				<th>Description & Link</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>S07</td>
-				<td><a href="./d/index.html">WD078-7 CSS - Box Model</a></td>
-			</tr>
-		</tbody>
-	</table>
-
-</div>
+		<div class="container">
+			<h1>Ungraded Activities</h1>
+			<table class="content-table">
+				<thead>
+					<tr>
+						<th>Ungraded</th>
+						<th>Description & Link</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>S07</td>
+						<td><a href="./d/index.html">WD078-7 CSS - Box Model</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
 		<script src="js/script.js" />
 	</body>
