--- a/s09/index.html
+++ b/s09/index.html
@@ -20,7 +20,7 @@
 		<title>Developer Portfolio</title>
 	</head>
 	<body>
-		<div class="p-4 container-fluid">
+		<div class="p-4 my-container container">
 
 			<div class="profile">
 				<div class="text-center mb-4">
