Done with s11, WD078-11 Bootstrap - Components

--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
 							<a href="./s10/index.html">WD078-10 Bootstrap - Flex</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S11</td>
+						<td>
+							<a href="./s11/index.html">WD078-11 Bootstrap - Components</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
