Added nav-bar for capstone 1

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 						<td>S07</td>
 						<td><a href="./d/index.html">WD078-7 CSS - Box Model</a></td>
 					</tr>
+					<tr>
+						<td>Responsive Nav bar</td>
+						<td><a href="./capstone-01a/index.html">Responsive Nav bar</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
