--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 							<a href="./s11/index.html">WD078-11 Bootstrap - Components</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S14</td>
+						<td>
+							<a href="./s14/index.html">
+								WD078-14 JavaScript - Introduction</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
