--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
 	</head>
 	<body>
 		<div class="container">
+			<h1>Capstone Projects</h1>
+			<table class="content-table">
+				<thead>
+					<tr>
+						<th>Capstone</th>
+						<th>Description & Link</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>S12-S13</td>
+						<td>
+							<a href="https://vilmarcabanero.com/" target="_blank"
+								>WD078-12/13 Capstone 1 Development - Developer Portfolio</a
+							>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="container">
 			<h1>HTML, CSS and Javascript Activities</h1>
 
 			<table class="content-table">
@@ -64,7 +85,7 @@
 							>
 						</td>
 					</tr>
-					
+
 					<tr>
 						<td>S09</td>
 						<td>
@@ -84,10 +105,16 @@
 						</td>
 					</tr>
 					<tr>
+						<td>S11</td>
+						<td>
+							<a href="./s11/index.html">WD078-11 Bootstrap - Components</a>
+						</td>
+					</tr>
+
+					<tr>
 						<td>S14</td>
 						<td>
-							<a href="./s14/index.html">
-								WD078-14 JavaScript - Introduction</a>
+							<a href="./s14/index.html"> WD078-14 JavaScript - Introduction</a>
 						</td>
 					</tr>
 				</tbody>
@@ -115,6 +142,5 @@
 				</tbody>
 			</table>
 		</div>
-
 	</body>
 </html>
