Added ungraded s15 WD078-15 JavaScript - Selection Control Structures

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
 						<td>Responsive Nav bar</td>
 						<td><a href="./capstone-01a/index.html">Responsive Nav bar</a></td>
 					</tr>
+					<tr>
+						<td>S15</td>
+						<td><a href="./ungraded-s15/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
