--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@
 						<td><a href="./capstone-01a/index.html">Responsive Nav bar</a></td>
 					</tr>
 					<tr>
-						<td>S15</td>
+						<td>S15a</td>
 						<td><a href="./ungraded-s15/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+					</tr>
+					<tr>
+						<td>S15b</td>
+						<td><a href="./ungraded-s15b/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
 					</tr>
 				</tbody>
 			</table>
