--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
 						<td>S15b</td>
 						<td><a href="./ungraded-s15b/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
 					</tr>
+										<tr>
+						<td>S15c</td>
+						<td><a href="./ungraded-s15b/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
