--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</tr>
 										<tr>
 						<td>S15c</td>
-						<td><a href="./ungraded-s15b/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+						<td><a href="./ungraded-s15c/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
 					</tr>
 				</tbody>
 			</table>
