Added WD078-15 JavaScript - Selection Control Structures

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
 							<a href="./s14/index.html"> WD078-14 JavaScript - Introduction</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S15</td>
+						<td>
+							<a href="./s15/index.html"> WD078-15 JavaScript - Selection Control Structures</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
