--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
 							<a href="./s15/index.html"> WD078-15 JavaScript - Selection Control Structures</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S16</td>
+						<td>
+							<a href="./s16/index.html"> WD078-16 JavaScript - Repetition Control Structures</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
