Added s16b, WD078-C1 Loops in a Function

--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
 							<a href="./s16/index.html"> WD078-16 JavaScript - Repetition Control Structures</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S16b</td>
+						<td>
+							<a href="./s16b/index.html"> WD078-C1 Loops in a Function</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
