Done with WD078-17 JavaScript - Array Manipulation, part 1

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 							<a href="./s16b/index.html"> WD078-C1 Loops in a Function</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S17</td>
+						<td>
+							<a href="./s17/index.html"> WD078-17 JavaScript - Array Manipulation</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
