Added s17b, array manipulation

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
 							<a href="./s17/index.html"> WD078-17 JavaScript - Array Manipulation</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S17b</td>
+						<td>
+							<a href="./s17b/index.html"> WD078-17 JavaScript - Array Manipulation</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
