WD078-18 JavaScript - Objects

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 							<a href="./s17b/index.html"> WD078-17 JavaScript - Array Manipulation</a>
 						</td>
 					</tr>
+					<tr>
+						<td>S18</td>
+						<td>
+							<a href="./s18/index.html"> WD078-18 JavaScript - Objects</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
