Added s42 done, s43 not yet done

--- a/index.html
+++ b/index.html
@@ -120,13 +120,17 @@
 					<tr>
 						<td>S15</td>
 						<td>
-							<a href="./s15/index.html"> WD078-15 JavaScript - Selection Control Structures</a>
+							<a href="./s15/index.html">
+								WD078-15 JavaScript - Selection Control Structures</a
+							>
 						</td>
 					</tr>
 					<tr>
 						<td>S16</td>
 						<td>
-							<a href="./s16/index.html"> WD078-16 JavaScript - Repetition Control Structures</a>
+							<a href="./s16/index.html">
+								WD078-16 JavaScript - Repetition Control Structures</a
+							>
 						</td>
 					</tr>
 					<tr>
@@ -138,19 +142,39 @@
 					<tr>
 						<td>S17</td>
 						<td>
-							<a href="./s17/index.html"> WD078-17 JavaScript - Array Manipulation</a>
+							<a href="./s17/index.html">
+								WD078-17 JavaScript - Array Manipulation</a
+							>
 						</td>
 					</tr>
 					<tr>
 						<td>S17b</td>
 						<td>
-							<a href="./s17b/index.html"> WD078-17 JavaScript - Array Manipulation</a>
+							<a href="./s17b/index.html">
+								WD078-17 JavaScript - Array Manipulation</a
+							>
 						</td>
 					</tr>
 					<tr>
 						<td>S18</td>
 						<td>
 							<a href="./s18/index.html"> WD078-18 JavaScript - Objects</a>
+						</td>
+					</tr>
+					<tr>
+						<td>S42</td>
+						<td>
+							<a href="./s42/index.html">
+								WD078-42 JavaScript - DOM Manipulation</a
+							>
+						</td>
+					</tr>
+					<tr>
+						<td>S43</td>
+						<td>
+							<a href="./s43/index.html">
+								WD078-43 JavaScript - Reactive DOM with JSON</a
+							>
 						</td>
 					</tr>
 				</tbody>
@@ -177,15 +201,27 @@
 					</tr>
 					<tr>
 						<td>S15a</td>
-						<td><a href="./ungraded-s15/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+						<td>
+							<a href="./ungraded-s15/index.html"
+								>WD078-15 JavaScript - Selection Control Structures</a
+							>
+						</td>
 					</tr>
 					<tr>
 						<td>S15b</td>
-						<td><a href="./ungraded-s15b/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+						<td>
+							<a href="./ungraded-s15b/index.html"
+								>WD078-15 JavaScript - Selection Control Structures</a
+							>
+						</td>
 					</tr>
-										<tr>
+					<tr>
 						<td>S15c</td>
-						<td><a href="./ungraded-s15c/index.html">WD078-15 JavaScript - Selection Control Structures</a></td>
+						<td>
+							<a href="./ungraded-s15c/index.html"
+								>WD078-15 JavaScript - Selection Control Structures</a
+							>
+						</td>
 					</tr>
 				</tbody>
 			</table>
