Added activity s44 WD078-44 JavaScript - Reactive DOM with Fetch

--- a/index.html
+++ b/index.html
@@ -177,6 +177,14 @@
 							>
 						</td>
 					</tr>
+					<tr>
+						<td>S44</td>
+						<td>
+							<a href="./s44/index.html">
+								WD078-44 JavaScript - Reactive DOM with Fetch</a
+							>
+						</td>
+					</tr>
 				</tbody>
 			</table>
 		</div>
